<resources>
    <string name="app_name">Advertisement</string>
    <!-- Drawer main menu -->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_registration">Войти или зарегистрироваться</string>
    <!--Sign dialog-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Неудалось зарегистрироваться</string>
    <string name="sign_in_error">Неудалось войти</string>
    <string name="email_verification_error">Неудалось отправить email для подтверждения</string>
    <string name="email_is_empty">Введите адрес электронной почты</string>
    <string name="email_verification">На вашу почту отправлена ссылка для подтверждения вашего аккаунта</string>
    <string name="password_recover">На вашу почту отправлена ссылка для восстановления пароля</string>

    <!--Error-->
    <string name="ERROR_EMAIL_ALREADY_IN_USEr">Адрес электронной почты уже используется</string>
    <string name="mew_ad">Mew ad</string>

    <!--for adapter spinner -->
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>